[build-system]
requires = ["setuptools>=75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koi-fish"
dynamic = ["version"]
description = ""
keywords = []
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Kaloyan Ivanov", email = "kaloyan.ivanov88@gmail.com" }]

requires-python = ">= 3.12"

[project.urls]
Repository = "https://github.com/kaliv0/koi-fish.git"

[project.scripts]
koi = "koi.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "koi.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["koi"]